--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"stylelint": "^14.4.0",
 		"typescript": "^4.1.0",
 		"vue-loader": "^17.0.0",
-		"webpack": "5.69.0"
-	}
+		"webpack": "5.69.0",
+        "eslint-plugin-unused-imports": "^2.0.0"
+    }
 }
