--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "types": ["@tarojs/components/vue3", "jest"],
-        "lib": ["dom", "es2016", "es2018.promise"],
+        "lib": ["dom", "es2022"],
         "target": "es2017",
         "module": "commonjs",
         "removeComments": false,
