--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@tarojs/shared": "3.5.11",
 		"@tarojs/taro": "3.5.11",
 		"@tarojs/taro-h5": "3.5.11",
+		"dayjs": "^1.11.7",
 		"pinia": "^2.0.28",
 		"qs": "^6.11.0",
 		"tarojs-router-next": "^3.2.0",
@@ -72,12 +73,12 @@
 		"css-loader": "3.4.2",
 		"eslint": "^8.31.0",
 		"eslint-config-taro": "3.5.11",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"eslint-plugin-vue": "^8.0.0",
 		"style-loader": "1.3.0",
 		"stylelint": "^14.4.0",
 		"typescript": "^4.1.0",
 		"vue-loader": "^17.0.0",
-		"webpack": "5.69.0",
-        "eslint-plugin-unused-imports": "^2.0.0"
-    }
+		"webpack": "5.69.0"
+	}
 }
